test/parser/Queries/syntax_errors/fail_K-WhereExpr-2.xq
(:*foo***** $ **** where *********** eq *** where ****** where *** ne ********** eq ** eq ** where *******: let 
(: Test:            $     foo                let    :) where 
(: Written  Frans Englich      where       foo                  :)foo
(: Date: 2006-10-05T18:29:37+02:00             where           where   :)
 let (: let  Purpose: Get the string valueof for  the return statement of a for expression  where after being filtered by a  let where clause. :)
(: $ *************************** $ ** ne ***** ne ****** where *********foo* for *foo***:
string((for where  $fo in (1, 2, 3)foo where $fo eq3 return $fo))fooeq "3"